--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -1,13 +1,9 @@
-// :root {
-//     --color-1: #ffffff;
-//     --color-2: red;
-// }
-
 $base-font: 'Oswald';
 
 //Colors
 $base-color: red;
 $color-1: #fff;
+$color-2: #000;
 
 //Sizing
 $fontsize-xs: 8px;
