--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,7 +2,11 @@
 @import '../css/variables.scss';
 
 body {
-    font-family: $base-font;
+    font-family: $base-font-2;
+
+    h1,h2,h3,h4,h5,h6 {
+        font-family: $base-font-1;
+    }
 }
 
 header {
