Added more pages
Added more pages

--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -11,3 +11,12 @@ $fontsize-xs: 8px;
 $fontsize-s: 12px;
 $fontsize-m: 16px;
 $fontsize-l: 20px;
+$fontsize-xl: 24px;
+$fontsize-xxl: 28px;
+
+$margin-xs: 10px;
+$margin-s: 15px;
+$margin-m: 20px;
+$margin-l: 25px;
+$margin-xl: 30px;
+$margin-xxl: 35px;
