--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -2,22 +2,32 @@
 @import '../css/variables.scss';
 
 body {
+    font-size: $fontsize-m;
     font-family: $base-font-2;
 
-    h1,h2,h3,h4,h5,h6 {
-        font-family: $base-font-1;
+    h1              { font-size: 2em; margin: .67em 0 }
+    h2              { font-size: 1.5em; margin: .75em 0 }
+    h3              { font-size: 1.17em; margin: .83em 0 }
+    h5              { font-size: .83em; margin: 1.5em 0 }
+    h6              { font-size: .75em; margin: 1.67em 0 }
+    h1, h2, h3, h4,
+    h5, h6          { font-weight: bolder }
+
+    ul {
+        list-style-type: disc;
     }
 }
 
 header {
     padding: 20px 0;
     background-color: $base-color;
+    box-shadow: 1px 1px 10px rgb(0 0 0 / 15%);
     nav {
         font-size: $fontsize-l;
 
         ul {
             display: flex;
-
+            list-style-type: none;
             li {
                 flex: 1 1 auto;
                 padding: 0 10px;
@@ -63,4 +73,26 @@ main {
             }
         }
     }
+}
+
+.product-title {
+    color: #6b6b6b;
+    text-transform: uppercase;
+    font-size: $fontsize-xxl;
+
+    &:after{
+        content: '';
+        height: 3px;
+        display: block;
+        background-color: rgba(0,0,0,.1);
+        margin: 1em 0 1em;
+        width: 100%;
+        max-width: 30px;
+    }
+}
+
+.price-amount {
+    font-size: $fontsize-xl;
+    font-weight: 700;
+    margin-bottom: $margin-m;
 }
