--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -4,6 +4,7 @@
 body {
     font-size: $fontsize-m;
     font-family: $base-font-2;
+    margin-bottom: $margin-xl;
 
     h1              { font-size: 2em; margin: .67em 0 }
     h2              { font-size: 1.5em; margin: .75em 0 }
@@ -13,13 +14,16 @@ body {
     h1, h2, h3, h4,
     h5, h6          { font-weight: bolder }
 
+    p {
+        margin: .83em 0
+    }
     ul {
         list-style-type: disc;
     }
 }
 
 header {
-    padding: 20px 0;
+    padding: $margin-m 0;
     background-color: $base-color;
     box-shadow: 1px 1px 10px rgb(0 0 0 / 15%);
     nav {
