--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,5 +1,6 @@
 @import '../css/fonts.scss';
 @import '../css/variables.scss';
+@import '~react-image-gallery/styles/scss/image-gallery.scss';
 
 body {
     font-size: $fontsize-m;
