--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -63,7 +63,7 @@ main {
     .breadcrumb {
 
         h1{
-            font-size: $fontsize-l;
+            font-size: $fontsize-xl;
         }
 
     }
