--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -2,9 +2,11 @@ $base-font-1: 'Oswald';
 $base-font-2: 'Open Sans';
 
 //Colors
-$base-color: red;
+$base-color: #f2f2f7;
 $color-1: #fff;
 $color-2: #000;
+$color-3:#ef2809;
+$color-4:#222;
 
 //Sizing
 $fontsize-xs: 8px;
