--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -27,17 +27,7 @@ body {
     p {
         margin: .83em 0
     }
-    ul {
-        list-style-type: disc;
 
-        li{
-            &:before{
-                content: '/e092';
-                display: inline-block;
-                font-family: 'Font Awesome';
-             }
-        }
-    }
 }
 
 header {
@@ -79,10 +69,36 @@ main {
     
     .breadcrumb {
 
-        h1{
+        h1 {
             font-size: $fontsize-xl;
         }
 
+    }
+
+    .separator {
+        position: relative;
+        width: 100%;
+        height: 50px;
+        margin-bottom: $margin-xl;
+        &:before{
+            content: '';
+            position: absolute;
+            top: 30px;
+            width: 100%;
+            height: 3px;
+            background-color: $color-2;
+        }
+        &:after{
+            content: '';
+            position: absolute;
+            left: 0;
+            right: 0;
+            margin: auto;
+            top: 10px;
+            width: 50px;
+            height: 50px;
+            background: url('../images/tire-icon.png') no-repeat center center;
+        }
     }
 
     .stock-container{
@@ -95,6 +111,21 @@ main {
             box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.1);
             &:hover{
                 box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.4);
+            }
+        }
+    }
+
+    .entry-content {
+        ul {
+            list-style-type: none;
+    
+            li{
+                &:before{
+                    content: '\f133';
+                    display: inline-block;
+                    font-family: "bootstrap-icons";
+                    padding-right: 10px;
+                 }
             }
         }
     }
