--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -83,9 +83,9 @@ main {
         &:before{
             content: '';
             position: absolute;
-            top: 30px;
+            top: 20px;
             width: 100%;
-            height: 3px;
+            height: 2px;
             background-color: $color-2;
         }
         &:after{
@@ -94,7 +94,6 @@ main {
             left: 0;
             right: 0;
             margin: auto;
-            top: 10px;
             width: 50px;
             height: 50px;
             background: url('../images/tire-icon.png') no-repeat center center;
@@ -112,6 +111,10 @@ main {
             &:hover{
                 box-shadow: 0px 0px 15px 1px rgba(0,0,0,0.4);
             }
+        }
+
+        .brand-image{
+            max-width: 60%;
         }
     }
 
