--- a/src/assets/css/variables.scss
+++ b/src/assets/css/variables.scss
@@ -5,7 +5,7 @@ $base-font-2: 'Open Sans';
 $base-color: #f2f2f7;
 $color-1: #fff;
 $color-2: #000;
-$color-3:#ef2809;
+$color-3:#999;
 $color-4:#222;
 
 //Sizing
